fixing the contat button mobile

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -174,6 +174,7 @@
   .nav-links.show {
     visibility: visible;
     opacity: 1;
+    padding: 1% 0;
   }
 
   .hamburger {
